manifests/excalidraw/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  type: ClusterIP
  ports:
    - name: excalidraw
      protocol: TCP
      port: 80
      targetPort: 80
