manifests/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: public
  tls:
    - hosts:
        - draw.elijah.fyi
  rules:
    - host: drarw.elijah.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 80
